--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+squashfs (4.1+vyatta-2) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 22 Jul 2010 17:22:21 -0700
+
 squashfs (4.1+vyatta-1) unstable; urgency=low
 
   [ plougher ]
