--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+squashfs (4.1+vyatta-6+napa1) unstable; urgency=low
+
+  * new branch
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Thu, 07 Jul 2011 20:46:02 -0700
+
 squashfs (4.1+vyatta-6) unstable; urgency=low
 
   * new branch
