--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+squashfs (4.1+vyatta-8+pacifica1) unstable; urgency=low
+
+  * new branch
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 12 Oct 2012 18:45:04 -0700
+
 squashfs (4.1+vyatta-8) unstable; urgency=low
 
   * new branch
