--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+squashfs (4.1+vyatta-9+hydrogen1) unstable; urgency=low
+
+  * New branch
+
+ -- Daniil Baturin <daniil@baturin.org>  Sat, 16 Nov 2013 23:58:16 +0100
+
 squashfs (4.1+vyatta-9+daisy1) unstable; urgency=low
 
   * create daisy branch
