--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+squashfs (4.1+vyos1+helium1) unstable; urgency=low
+
+  * New branch
+
+ -- Daniil Baturin <daniil@baturin.org>  Sat, 15 Feb 2014 15:38:56 +0100
+
 squashfs (4.1+vyatta-9+hydrogen1) unstable; urgency=low
 
   * New branch
