--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+squashfs (4.1+vyos2+lithium1) unstable; urgency=low
+
+  * New branch
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sun, 14 Dec 2014 11:44:54 +0000
+ 
 squashfs (4.1+vyos1+helium1) unstable; urgency=low
 
   * New branch
